Added Sass to the project

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="img/logo.svg" alt="" />
+            <img src="src/images/logo.svg" alt="" />
           </a>
         </div>
         <nav>
@@ -60,8 +60,8 @@
         </div>
         
         <h3>Deploy to anywhere, even the edge</h3>
-        <img class="logos" src="img/deploy-logos.png" alt="" />
-        <img class="logos-small" src="img/deploy-logos-small.png" alt="" />
+        <img class="logos" src="src/images/deploy-logos.png" alt="" />
+        <img class="logos-small" src="src/images/deploy-logos-small.png" alt="" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
           doloribus, vel ipsum mollitia aliquid cumque commodi corrupti omnis
