--- a/index.html
+++ b/index.html
@@ -11,22 +11,7 @@
     <title>Astro Crash Course</title>
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html">
-            <img src="img/logo.svg" alt="" />
-          </a>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="blog.html">Blog</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+
     <section class="showcase">
       <div class="showcase-text">
         <h1>Welcome To The Astro Crash Course!</h1>
@@ -36,8 +21,8 @@
         </p>
       </div>
       <div class="showcase-img">
-        <img class="logos" src="img/framework-logos.png" alt="" />
-        <img class="logos-small" src="img/framework-logos-small.png" alt="" />
+        <img class="logos" src="src/images/framework-logos.png" alt="" />
+        <img class="logos-small" src="src/images/framework-logos-small.png" alt="" />
       </div>
 
       <p class="showcase-demo">
