--- a/post.html
+++ b/post.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="img/logo.svg" alt="" />
+            <img src="src/images/logo.svg" alt="" />
           </a>
         </div>
         <nav>
